# arm7tdmi

./: .gitignore  CMakeLists.txt  README.md  arm7tdmi.cmake  decoder.cpp  main.cpp  types.h  util.h
example/: CMakeLists.txt  main.cpp
include/arm7tdmi/: common.h  cpu.h  decoder.h  memory.h  memory_interface.h  register.h  types.h  util.h
src/: cpu.cpp  decoder.cpp  memory.cpp  memory_interface.cpp  register.cpp  types.cpp
tests/: CMakeLists.txt  test_arm_instructions.cpp  test_decode_arm_instructions.cpp  test_decode_thumb_instructions.cpp  test_decoder.cpp  test_thumb_instructions.cpp  test_util.h  utility.h
tests/assembly/: test_decode_branch_and_branch_with_link.s
tests/assembly/arm/: test_decode_branch.s  test_decode_branch_and_exchange.s  test_decode_halfword_data_transfer_immediate.s  test_decode_halfword_data_transfer_register.s  test_decode_multiply.s  test_decode_multiply_long.s  test_decode_psr_transfer_msr.s  test_single_data_swap.s  test_software_interrupt.s
tests/assembly/arm/decode/: test_decode_block_data_transfer.s  test_decode_branch_and_exchange.s  test_decode_data_processing.s  test_decode_psr_transfer_mrs.s  test_decode_single_data_transfer.s
tests/assembly/arm/instructions/: test_block_data_transfer.s  test_branch.s  test_branch_and_exchange.s
tests/assembly/thumb/: test_thumb_decode_add_subtract.s  test_thumb_decode_alu_operations.s  test_thumb_decode_load_address.s  test_thumb_decode_load_store_halfword.s  test_thumb_decode_load_store_with_immediate_offset.s  test_thumb_decode_long_branch_with_link.s  test_thumb_decode_multiple_load_store.s  test_thumb_decode_pc_relative_load.s  test_thumb_decode_push_pop_registers.s  test_thumb_decode_software_interrupt.s  test_thumb_decode_unconditional_branch.s
tests/assembly/thumb/decode/: test_thumb_decode_add_offset_to_stack_pointer.s  test_thumb_decode_conditional_branch.s  test_thumb_decode_hi_register_operations_branch_exchange.s  test_thumb_decode_load_store_sign_extended_byte_halfword.s  test_thumb_decode_load_store_with_register_offset.s  test_thumb_decode_move_compare_add_subtract_immediate.s  test_thumb_decode_move_shifted_register.s  test_thumb_decode_pc_relative_load.s  test_thumb_decode_sp_relative_load_store.s  test_thumb_decode_unconditional_branch.s
